--- a/src/view/css/home.css
+++ b/src/view/css/home.css
@@ -78,18 +78,18 @@ main.container .buscar .container .carrossel .item .servicos-busca .ico { width:
 main.container .buscar .container .carrossel .item .servicos-busca .ico.bercario { background:url("../images/ico-bercario.png") no-repeat;background-position:center center;  }
 main.container .buscar .container .carrossel .item .servicos-busca .ico.trocador { background:url("../images/ico-trocador.png") no-repeat;background-position:center center;  }
 main.container .buscar .container .carrossel .item .servicos-busca .ico.playground { background:url("../images/ico-playground.png") no-repeat;background-position:center center;  }
-main.container .buscar .container .carrossel .item .servicos-busca .ico.estacionamento { background:url("../images/ico-estacionamento.png") no-repeat;background-position:center center;  }
+main.container .buscar .container .carrossel .item .servicos-busca .ico.estacionam { background:url("../images/ico-estacionamento.png") no-repeat;background-position:center center;  }
 main.container .buscar .container .carrossel .item .servicos-busca .ico.papinha { background:url("../images/ico-papinha.png") no-repeat;background-position:center center;  }
-main.container .buscar .container .carrossel .item .servicos-busca .ico.musica { background:url("../images/ico-papinha.png") no-repeat;background-position:center center;  }
-main.container .buscar .container .carrossel .item .servicos-busca .ico.ban-defi { background:url("../images/ico-papinha.png") no-repeat;background-position:center center;  }
-main.container .buscar .container .carrossel .item .servicos-busca .ico.ban-fami { background:url("../images/ico-papinha.png") no-repeat;background-position:center center;  }
-main.container .buscar .container .carrossel .item .servicos-busca .ico.cadeirao { background:url("../images/ico-papinha.png") no-repeat;background-position:center center;  }
-main.container .buscar .container .carrossel .item .servicos-busca .ico.com-vega { background:url("../images/ico-papinha.png") no-repeat;background-position:center center;  }
-main.container .buscar .container .carrossel .item .servicos-busca .ico.com-lact { background:url("../images/ico-papinha.png") no-repeat;background-position:center center;  }
-main.container .buscar .container .carrossel .item .servicos-busca .ico.com-celi { background:url("../images/ico-papinha.png") no-repeat;background-position:center center;  }
-main.container .buscar .container .carrossel .item .servicos-busca .ico.copa { background:url("../images/ico-papinha.png") no-repeat;background-position:center center;  }
-main.container .buscar .container .carrossel .item .servicos-busca .ico.pos-rese { background:url("../images/ico-papinha.png") no-repeat;background-position:center center;  }
-main.container .buscar .container .carrossel .item .servicos-busca .ico.cuidador { background:url("../images/ico-papinha.png") no-repeat;background-position:center center;  }
+main.container .buscar .container .carrossel .item .servicos-busca .ico.musica { background:url("../images/ico-musica.png") no-repeat;background-position:center center;  }
+main.container .buscar .container .carrossel .item .servicos-busca .ico.ban-defi { background:url("../images/ico-ban-defi.png") no-repeat;background-position:center center;  }
+main.container .buscar .container .carrossel .item .servicos-busca .ico.ban-fami { background:url("../images/ico-ban-fami.png") no-repeat;background-position:center center;  }
+main.container .buscar .container .carrossel .item .servicos-busca .ico.cadeirao { background:url("../images/ico-cadeirao.png") no-repeat;background-position:center center;  }
+main.container .buscar .container .carrossel .item .servicos-busca .ico.com-vega { background:url("../images/ico-com-vega.png") no-repeat;background-position:center center;  }
+main.container .buscar .container .carrossel .item .servicos-busca .ico.com-lact { background:url("../images/ico-com-lact.png") no-repeat;background-position:center center;  }
+main.container .buscar .container .carrossel .item .servicos-busca .ico.com-celi { background:url("../images/ico-com-celi.png") no-repeat;background-position:center center;  }
+main.container .buscar .container .carrossel .item .servicos-busca .ico.copa { background:url("../images/ico-copa.png") no-repeat;background-position:center center;  }
+main.container .buscar .container .carrossel .item .servicos-busca .ico.pos-rese { background:url("../images/ico-pos-rese.png") no-repeat;background-position:center center;  }
+main.container .buscar .container .carrossel .item .servicos-busca .ico.cuidador { background:url("../images/ico-cuidador.png") no-repeat;background-position:center center;  }
 main.container .buscar .container .carrossel .item .servicos-busca h3 { width:110px;height:40px;font-size:14px;color:#FFF;text-decoration:none;vertical-align:middle;display:table-cell;text-align:center;line-height:16px; }
 
 main.container .top-estabelecimentos .container { flex-direction:row;flex-wrap:wrap; }
@@ -115,18 +115,18 @@ main.container .top-estabelecimentos .container { flex-direction:row;flex-wrap:w
 .item .carrossel-servico .item-carrocel .servicos-itens .ico.bercario { background:url("../images/ico-bercario-min.png") no-repeat;background-position:center center;  }
 .item .carrossel-servico .item-carrocel .servicos-itens .ico.trocador { background:url("../images/ico-trocador-min.png") no-repeat;background-position:center center;  }
 .item .carrossel-servico .item-carrocel .servicos-itens .ico.playground { background:url("../images/ico-playground-min.png") no-repeat;background-position:center center;  }
-.item .carrossel-servico .item-carrocel .servicos-itens .ico.estacionamento { background:url("../images/ico-estacionamento-min.png") no-repeat;background-position:center center;  }
+.item .carrossel-servico .item-carrocel .servicos-itens .ico.estacionam { background:url("../images/ico-estacionamento-min.png") no-repeat;background-position:center center;  }
 .item .carrossel-servico .item-carrocel .servicos-itens .ico.papinha { background:url("../images/ico-papinha-min.png") no-repeat;background-position:center center;  }
-.item .carrossel-servico .item-carrocel .servicos-itens .ico.musica { background:url("../images/ico-papinha-min.png") no-repeat;background-position:center center;  }
-.item .carrossel-servico .item-carrocel .servicos-itens .ico.ban-defi { background:url("../images/ico-papinha-min.png") no-repeat;background-position:center center;  }
-.item .carrossel-servico .item-carrocel .servicos-itens .ico.ban-fami { background:url("../images/ico-papinha-min.png") no-repeat;background-position:center center;  }
-.item .carrossel-servico .item-carrocel .servicos-itens .ico.cadeirao { background:url("../images/ico-papinha-min.png") no-repeat;background-position:center center;  }
-.item .carrossel-servico .item-carrocel .servicos-itens .ico.com-vega { background:url("../images/ico-papinha-min.png") no-repeat;background-position:center center;  }
-.item .carrossel-servico .item-carrocel .servicos-itens .ico.com-lact { background:url("../images/ico-papinha-min.png") no-repeat;background-position:center center;  }
-.item .carrossel-servico .item-carrocel .servicos-itens .ico.com-celi { background:url("../images/ico-papinha-min.png") no-repeat;background-position:center center;  }
-.item .carrossel-servico .item-carrocel .servicos-itens .ico.copa { background:url("../images/ico-papinha-min.png") no-repeat;background-position:center center;  }
-.item .carrossel-servico .item-carrocel .servicos-itens .ico.pos-rese { background:url("../images/ico-papinha-min.png") no-repeat;background-position:center center;  }
-.item .carrossel-servico .item-carrocel .servicos-itens .ico.cuidador { background:url("../images/ico-papinha-min.png") no-repeat;background-position:center center;  }
+.item .carrossel-servico .item-carrocel .servicos-itens .ico.musica { background:url("../images/ico-musica-min.png") no-repeat;background-position:center center;  }
+.item .carrossel-servico .item-carrocel .servicos-itens .ico.ban-defi { background:url("../images/ico-ban-defi-min.png") no-repeat;background-position:center center;  }
+.item .carrossel-servico .item-carrocel .servicos-itens .ico.ban-fami { background:url("../images/ico-ban-fami-min.png") no-repeat;background-position:center center;  }
+.item .carrossel-servico .item-carrocel .servicos-itens .ico.cadeirao { background:url("../images/ico-cadeirao-min.png") no-repeat;background-position:center center;  }
+.item .carrossel-servico .item-carrocel .servicos-itens .ico.com-vega { background:url("../images/ico-com-vega-min.png") no-repeat;background-position:center center;  }
+.item .carrossel-servico .item-carrocel .servicos-itens .ico.com-lact { background:url("../images/ico-com-lact-min.png") no-repeat;background-position:center center;  }
+.item .carrossel-servico .item-carrocel .servicos-itens .ico.com-celi { background:url("../images/ico-com-celi-min.png") no-repeat;background-position:center center;  }
+.item .carrossel-servico .item-carrocel .servicos-itens .ico.copa { background:url("../images/ico-copa-min.png") no-repeat;background-position:center center;  }
+.item .carrossel-servico .item-carrocel .servicos-itens .ico.pos-rese { background:url("../images/ico-pos-rese-min.png") no-repeat;background-position:center center;  }
+.item .carrossel-servico .item-carrocel .servicos-itens .ico.cuidador { background:url("../images/ico-cuidador-min.png") no-repeat;background-position:center center;  }
 .item .carrossel-servico .item-carrocel .servicos-itens h3 { width:50px;height:20px;font-size:10px;color:#4095f5;text-decoration:none;vertical-align:middle;display:table-cell;text-align:center;line-height:12px; }
 
 
